// order-service/order.proto
syntax = "proto3";

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  int32 productId = 1;
  int32 quantity = 2;
}

message OrderResponse {
  int32 orderId = 1;
  string status = 2;
}